支持组件单独运行，支持跨组件调用

--- a/component_explore/src/main/debug/res/layout/activity_debug.xml
+++ b/component_explore/src/main/debug/res/layout/activity_debug.xml
@@ -5,12 +5,9 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <TextView
-        android:id="@+id/idVersionTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="发现Component"
-       />
+    <FrameLayout
+        android:id="@+id/fl_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
